--- a/views/sobre.html
+++ b/views/sobre.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sobre</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Página Sobre</title>
+    <link rel="stylesheet" href="../styles/sobre.css" />
 </head>
 <body>
-    <h1></h1>
+<header>
+    <button class="btn-voltar" onclick="window.location.href='../index.html'">
+        &laquo; <span>voltar</span>
+    </button>
+
+    <h2>Sobre nós</h2>
+</header>
+
+<main>
+    <section class="circulos">
+        <div class="item">
+            <div class="circulo img1"></div>
+            <p><strong>João Vitor Santana</strong></p>
+            <p class="descricao">Designer do projeto, criação da identidade visual.</p>
+            <p class="contato"><a href="https://github.com/jovsan" target="_blank">GitHub</a></p>
+        </div>
+        <div class="item">
+            <div class="circulo img2"></div>
+            <p><strong>Sarah Silva de Albuquerque</strong></p>
+            <p class="descricao">Responsável pelo HTML e CSS do projeto.</p>
+            <p class="contato"><a href="https://github.com/Sarahszx" target="_blank">GitHub</a></p>
+        </div>
+        <div class="item">
+            <div class="circulo img3"></div>
+            <p><strong>Júlia Isly Cipriano da Silva</strong></p>
+            <p class="descricao">Designer, responsável pela identidade visual e layout.</p>
+            <p class="contato"><a href="https://github.com/juliaaislyy" target="_blank">GitHub</a></p>
+        </div>
+        <div class="item">
+            <div class="circulo img4"></div>
+            <p><strong>Fernanda Emanuele P. Correia</strong></p>
+            <p class="descricao">Designer, criação da identidade visual e layout.</p>
+            <p class="contato"><a href="https://github.com/Fernandayz" target="_blank">GitHub</a></p>
+        </div>
+        <div class="item">
+            <div class="circulo img5"></div>
+            <p><strong>Laura Esterfani da Silva</strong></p>
+            <p class="descricao">Responsável pelo Java Script do projeto.</p>
+            <p class="contato"><a href="https://github.com/lauraesterfani" target="_blank">GitHub</a></p>
+        </div>
+    </section>
+</main>
 </body>
 </html>
