--- a/views/sobre.html
+++ b/views/sobre.html
@@ -12,10 +12,23 @@
         &laquo; <span>voltar</span>
     </button>
 
-    <h2>Sobre nós</h2>
-</header>
+    <img src="https://pontocidadao.org.br/wp-content/themes/ponto-cidadao-2021/img/img-post-padrao.jpg"
+     alt="logo do ponto cidadao"  class="img-redonda">
 
+      <h1 class="titulo-sobre">Sobre o Jogo</h1>
+</header>
 <main>
+
+       <section class="sobre-jogo">
+        <p>
+            Este jogo foi desenvolvido com o objetivo de ensinar e reforçar conceitos de <strong>lógica de programação</strong> de forma interativa e divertida. Voltado para iniciantes, estudantes e entusiastas da área de tecnologia, ele oferece desafios progressivos que estimulam o raciocínio lógico, a resolução de problemas e a construção de algoritmos básicos.
+        </p>
+        
+        <p>
+            Este projeto é uma iniciativa orientada pelo professor <strong>Fábio Fraga</strong>.
+        </p>
+    </section>
+
     <section class="circulos">
         <div class="item">
             <div class="circulo img1"></div>
