--- a/views/sobre.html
+++ b/views/sobre.html
@@ -15,7 +15,7 @@
     <img src="https://pontocidadao.org.br/wp-content/themes/ponto-cidadao-2021/img/img-post-padrao.jpg"
      alt="logo do ponto cidadao"  class="img-redonda">
 
-      <h1 class="titulo-sobre">Sobre o Jogo</h1>
+      <h1 class="titulo-sobre">Objetivo do projeto</h1>
 </header>
 <main>
 
