--- a/views/jogo.html
+++ b/views/jogo.html
@@ -1,12 +1,17 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quiz de Lógica</title>
   <link rel="stylesheet" href="../styles/jogo.css" />
-</head>
+</head> 
 <body>
+  
+  <button class="botão-voltar" onclick="window.location.href='../index.html'">
+    &laquo; <span>voltar</span>
+  </button>
+
   <div class="quiz-container">
     <div class="quiz-header">
       <h1>Pergunta 1 de 10</h1>
