--- a/styles/jogo.css
+++ b/styles/jogo.css
@@ -8,9 +8,10 @@ body {
   background-color: #dbeeff;
   font-family: 'Segoe UI', sans-serif;
   display: flex;
-  justify-content: center;
+  flex-direction: column; 
   align-items: center;
   height: 100vh;
+  padding-top: 10px;
 }
 
 .quiz-container {
@@ -75,13 +76,13 @@ body {
 }
 
 .errada {
-  color:#F44336;
+  color: #F44336;
   font-weight: bold;
   border-color: #F44336;
 }
 
 .botão-avançar {
-  background-color:#1b43a0;
+  background-color: #1b43a0;
   color: #fff;
   border: none;
   padding: 12px;
@@ -94,4 +95,18 @@ body {
 
 .botão-avançar:hover {
   background-color: #16377e;
+}
+
+.botão-voltar {
+  background: none;
+  border: none;
+  font-style: italic;
+  font-size: 16px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  color: black;
+  align-self: flex-start;
+  margin-left: 16px;
+  margin-bottom: 10px;
 }
