--- a/views/ajuda.html
+++ b/views/ajuda.html
@@ -31,7 +31,7 @@
       <li>Se errar uma resposta, não desanime. Cada pergunta é uma chance nova.</li>
     </ul>
 
-    <a href="../index.html" class="botao-voltar-ao-menu">  &laquo; Voltar ao menu</a>
+    <a href="../index.html" class="botao-voltar-ao-menu">  ⭠ Voltar ao menu</a>
   </div>
 </body>
 </html>
