--- a/views/jogo.html
+++ b/views/jogo.html
@@ -5,12 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quiz de Lógica</title>
   <link rel="stylesheet" href="../styles/jogo.css" />
-</head> 
+</head>
 <body>
-  
-  <button class="botão-voltar" onclick="window.location.href='../index.html'">
-    &laquo; <span>voltar</span>
-  </button>
+
+  <a href="../index.html" class="voltar-menu">
+   ⭠
+  </a>
+
+  <div class="cronometro">
+    ⏱️ <span>00:30</span>
+  </div>
 
   <div class="quiz-container">
     <div class="quiz-header">
