--- a/views/sobre.html
+++ b/views/sobre.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 <header>
-    <button class="btn-voltar" onclick="window.location.href='../index.html'">
-        &laquo; <span>voltar</span>
-    </button>
+    <a class="btn-voltar" onclick="window.location.href='../index.html'">
+   ⭠
+    </a>
 
     <img src="https://pontocidadao.org.br/wp-content/themes/ponto-cidadao-2021/img/img-post-padrao.jpg"
      alt="logo do ponto cidadao"  class="img-redonda">
