--- a/views/jogo.html
+++ b/views/jogo.html
@@ -42,7 +42,7 @@
         resposta: "a"
       },
       {
-        pergunta: "Qual propiedade CSS e usada para criar espaçamento entre elementos (por fora)",
+        pergunta: "Qual propiedade CSS e usada para criar espaçamento entre elementos (por fora)?",
         opcoes: ["padding", "spacing", "margin", "border"],
         resposta: "c"
       },
@@ -72,7 +72,7 @@
         resposta: "c"
       },
       {
-        pergunta: "Em JavaScript, o que é closure??",
+        pergunta: "Em JavaScript, o que é closure?",
         opcoes: [" É uma função que lembra do escopo onde foi criada, mesmo após esse escopo ter sido finalizado", "É um erro que ocorre quando uma função não retorna nada", "É uma técnica usada para fechar conexões com o banco de dados", "É o mesmo que uma função recursiva"],
         resposta: "a"
       }
