--- a/styles/jogo.css
+++ b/styles/jogo.css
@@ -81,21 +81,22 @@ body {
 }
 
 .correta {
-  color: #4CAF50;
-  font-weight: bold;
+  background-color: #4CAF50;
+  color: white;
   border-color: #4CAF50;
-}
-
-.selecionada {
-  color: #195fb2;
   font-weight: bold;
-  border-color: #195fb2;
 }
 
 .errada {
-  color: #F44336;
-  font-weight: bold;
+  background-color: #F44336; 
+  color: white;
   border-color: #F44336;
+  font-weight: bold;
+}
+
+.desativada {
+  pointer-events: none;
+  opacity: 0.6;
 }
 
 .botão-avançar {
