--- a/styles/ajuda.css
+++ b/styles/ajuda.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #dbeeff;
+  background-color: #a3c8ff ;
   font-family: 'Segoe UI', sans-serif;
   color: #000;
 }
