--- a/styles/index.css
+++ b/styles/index.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Segoe UI', sans-serif;
-  background: #a3c8ff ;
+  background:#81B4FA;
   color: white;
   display: flex;
   align-items: center;
