--- a/styles/jogo.css
+++ b/styles/jogo.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #dbeeff;
+  background-color:	#99BBE8;
   font-family: 'Segoe UI', sans-serif;
   display: flex;
   flex-direction: column; 
