descrição dos criadores

--- a/views/sobre.html
+++ b/views/sobre.html
@@ -39,7 +39,7 @@
         <div class="item">
             <div class="circulo img2"></div>
             <p><strong>Sarah Silva de Albuquerque</strong></p>
-            <p class="descricao">Responsável pelo HTML e CSS do projeto.</p>
+            <p class="descricao">Responsável pelo HTML, CSS e JavaScript do projeto.</p>
             <p class="contato"><a href="https://github.com/Sarahszx" target="_blank">GitHub</a></p>
         </div>
         <div class="item">
@@ -57,7 +57,7 @@
         <div class="item">
             <div class="circulo img5"></div>
             <p><strong>Laura Esterfani da Silva</strong></p>
-            <p class="descricao">Responsável pelo Java Script do projeto.</p>
+            <p class="descricao">Ajudou no início do projeto com ideias e na organização do quiz.</p>
             <p class="contato"><a href="https://github.com/lauraesterfani" target="_blank">GitHub</a></p>
         </div>
     </section>
