--- a/views/jogo.html
+++ b/views/jogo.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quiz de Lógica</title>
   <link rel="stylesheet" href="../styles/jogo.css" />
+   <link rel="icon" href="../imagem/favicon.png"  />
 </head>
 <body>
 
