--- a/views/ajuda.html
+++ b/views/ajuda.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Área de Ajuda do Quiz</title>
   <link rel="stylesheet" href="../styles/ajuda.css" />
+   <link rel="icon" href="../imagem/favicon.png"  />
 </head>
 <body>
   <div class="container">
