--- a/views/sobre.html
+++ b/views/sobre.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página Sobre</title>
     <link rel="stylesheet" href="../styles/sobre.css" />
+      <link rel="icon" href="../imagem/favicon.png"  />
 </head>
 <body>
 <header>
